add wallet en trans

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -643,86 +643,86 @@
   "forgot_password_content_1": "Password recovery is not supported, but you can reset the password by importing the wallet. The new password will overwrite the old password",
   "forgot_password_content_2": "If you have not backed up the corresponding mnemonic word or private key, you can enter the password repeatedly to try, no limit",
   "forgot_password": "Forgot password",
-  "advanced_mode": "高级模式",
-  "software_agreement": "软件协议",
-  "save_qr_code": "保存二维码",
-  "create_import_wallet_before_using_feature": "您当前还没有钱包，请先创建或导入钱包再使用此功能",
-  "go_setting": "去设置",
-  "public_key_need_password": "获取公钥需要输入密码授权",
-  "authorized": "授权",
-  "save_success": "保存成功",
-  "save_fail": "保存失败",
-  "node": "节点",
-  "input_payment_password": "请输入支付密码",
-  "double_check_password_error": "两次输入密码不一致",
-  "receive_an_encrypted_message": "您收到一个加密位置信息, 是否打开",
-  "open": "打开",
-  "key_pair_error_share_location_again": "密钥对异常，请重新进行位置分享操作",
-  "activate_btc": "激活BTC",
-  "safety_certification_by_organizations": "经过权威机构安全认证",
+  "advanced_mode": "advanced mode",
+  "software_agreement": "Software agreement",
+  "save_qr_code": "Save QR Code",
+  "create_import_wallet_before_using_feature": "No wallet found, please create or import a wallet first",
+  "go_setting": "go to settings",
+  "public_key_need_password": "Input password to authorize public key",
+  "authorized": "Authorize",
+  "save_success": "Saved!",
+  "save_fail": "Failed to save",
+  "node": "Node",
+  "input_payment_password": "Input payment password",
+  "double_check_password_error": "Passwords don't match",
+  "receive_an_encrypted_message": "You have received an encrypted location, open it?",
+  "open": "Open",
+  "key_pair_error_share_location_again": "Keypair error, please re-share location",
+  "activate_btc": "Activate BTC",
+  "safety_certification_by_organizations": "Certified by authoritative institution",
   "atlas_consensus_node": "Atlas共识节点",
   "consensus_guarantee_for_hyberion": "为海伯利安生态提供共识保证",
   "home_atlas_description": "''Atlas是以空间共识和弹性空间分片为主要特征的高性能地图区块链，可解决空间分片，账户资产转移，资产确认等与空间相关的服务需求。具有抗审查、开放参与、高容错等特点。未来待Atlas链搭建完成，将支持海伯利安成为服务100亿人的去中心化全球地图经济体系。\n\nAtlas将在技术上实现高可伸缩性、低延迟性、低成本、隐私保护、可扩展性和交互性，支持全球体量巨大的地图定位请求和位置搜索请求。未来主网上线之时，用户将能成为Atlas节点，参与提升区块链网络的安全、性能等，并获得HYN奖励。Atlas节点的奖励细则还有待确认，但将与Map3网络的边缘节点以及核心节点关联统一。''",
-  "about_atlas_node": "关于Atlas共识节点",
-  "in_progress": "进行中...",
-  "node_not_create_by_app_withdraw_fail": "该节点并非创建于{app_name}，提取失败",
-  "not_exceed_remain_share": "不能超过剩余份额",
-  "share_contract": "分享合约",
-  "scan_qr_code_detail": "扫描二维码查看详情",
-  "latest_boot_node": "最新启动节点",
-  "see_more": "查看更多",
-  "show_qr_code": "显示二维码",
-  "legal_address_starting_1_or_bc_or_3": "请输入1、bc、或3开头的合法接收者地址",
-  "save_update": "保存更新",
-  "wallet_address_copied": "钱包地址已复制",
-  "wallet_address": "钱包地址",
-  "face_fingerprint_password": "面容/指纹与密码",
-  "update_success": "更新成功",
-  "update_error": "更新出错",
-  "has_unconfirm_btc_wait": "你有未确认的比特币转账，请稍后再试！",
-  "pending": "待确认",
-  "confirm_num": "确认{num}次",
-  "go_to_settings": "前往设置",
-  "go_to_setting_page_open_face_id": "请到设置页开启您的面容 ID",
-  "go_to_setting_page_open_touch_id": "请到设置页开启您的Touch ID",
-  "face_id_not_available_try_again": "面容 ID不可用，请稍后重试",
-  "touch_id_not_available_try_again": "Touch ID不可用，请稍后重试",
-  "face_recognition": "面容识别",
-  "fingerprint_recognition": "指纹识别",
-  "need_fingerprint": "需要指纹",
-  "fingerprint_recognition_success": "指纹识别成功",
-  "fingerprint_sensor": "指纹传感器",
-  "no_fingerprint_detected": "未检测到指纹",
-  "go_setting_open_fingerprint": "请到设置页开启您的指纹识别",
-  "face_fingerprint_verify": "使用您的面容或指纹进行验证",
-  "biometrics": "生物识别",
-  "biometrics_unavailable": "生物识别不可用",
-  "go_setting_page_set_pin": "请到设置页设置您的pin",
-  "too_many_fail_try_again": "失败次数过多，请稍后重试",
-  "too_many_fail_biometrics_unavailable": "失败次数过多，生物识别暂不可用",
-  "not_support_other_systems": "您在其他操作系统，暂不支持",
-  "secret_free_payment": "免密支付",
-  "introduct_non_secret_payment": "免密支付介绍",
-  "non_secret_payment_introduction_detail": "免密支付将您的钱包密码通过安全加密算法存储至手机设备的Keychain / KeyStore中，交易时调用生物识别（指纹或面容）鉴权，快速完成支付与签名。",
-  "remind_after_open_non_secret_payment": "开启免密支付后，请妥善备份密码。如果忘记密码，可以通过导入助计词 / 私钥，重新设置密码",
-  "risk_warning": "风险提示",
-  "risk_warning_detail_non_secret_payment": "请了解你的手机设备生物识别的安全等级\n大额资产，请勿开启免密支付\n公共手机，请勿开启免密支付\n",
-  "disclaimer": "免责声明",
-  "disclaimer_detail_non_secret_payment": "手机厂商的生物识别技术安全等级各有差异，我们提醒用户谨慎使用该便捷功能。使用过程中出现任何生物识别技术漏洞引发的资产风险，本软件不承担法律责任。",
-  "non_secret_open_success": "免密支付开启成功",
-  "non_secret_open_fail": "免密支付开启失败",
-  "use_face_verify": "使用您的面容进行验证",
-  "cannot_fint_wallet": "找不到本地钱包",
-  "wallet_test": "钱包测试",
-  "active_btc": "激活BTC",
-  "show_qr": "显示二维码",
-  "wallet_address_error_hint": "请输入1、bc、或3开头的合法接收者地址",
-  "save_update": "保存更新",
-  "update_success": "更新成功",
-  "update_failed": "更新出错",
-  "to_be_confirmed": "待确认",
-  "unconfirmed_btc_transfer_please_try_again_later_hint": "你有未确认的比特币转账，请稍后再试！",
-  "transaction_detail_state_func": "确认{transactionDetailState}次",
+  "about_atlas_node": "Atlas consensus node",
+  "in_progress": "In progress...",
+  "node_not_create_by_app_withdraw_fail": "The node is not created from {app_name}, failed to withdraw",
+  "not_exceed_remain_share": "Do not exceed remaining quota",
+  "share_contract": "Share contract",
+  "scan_qr_code_detail": "Scan QR Code for details",
+  "latest_boot_node": "Latest initiated node",
+  "see_more": "Check for more",
+  "show_qr_code": "Show QR Code",
+  "legal_address_starting_1_or_bc_or_3": "Please input a valid receiver address initiating with 1, bc or 3",
+  "save_update": "Save your update",
+  "wallet_address_copied": "Wallet address copied",
+  "wallet_address": "Wallet address",
+  "face_fingerprint_password": "Face/fingerprint and password",
+  "update_success": "Updated!",
+  "update_error": "Update error",
+  "has_unconfirm_btc_wait": "You have a pending BTC transaction, please try again later",
+  "pending": "Pending",
+  "confirm_num": "Confirm {num} timesv",
+  "go_to_settings": "Go to settings",
+  "go_to_setting_page_open_face_id": "Please allow access to your facial ID in settings",
+  "go_to_setting_page_open_touch_id": "Unlock your Touch ID in settings",
+  "face_id_not_available_try_again": "Face recognition failed, please try again later",
+  "touch_id_not_available_try_again": "Touch ID unavailable, please try later",
+  "face_recognition": "Face recognition",
+  "fingerprint_recognition": "Fingerprint recognition",
+  "need_fingerprint": "Confirm your fingerprint",
+  "fingerprint_recognition_success": "Fingerprint unlocked",
+  "fingerprint_sensor": "Fingerprint sensor",
+  "no_fingerprint_detected": "No fingerprint detected",
+  "go_setting_open_fingerprint": "Please unlock fingerprint recognition in settings",
+  "face_fingerprint_verify": "Use your face or fingerprint to verify",
+  "biometrics": "Biometric recognition",
+  "biometrics_unavailable": "Biometrics unavailable",
+  "go_setting_page_set_pin": "Please set your PIN in settings",
+  "too_many_fail_try_again": "Failed too many times, please try again later",
+  "too_many_fail_biometrics_unavailable": "Failed too many times, biometrics unavailable",
+  "not_support_other_systems": "Your operating system is not supported",
+  "secret_free_payment": "Password-free payment",
+  "introduct_non_secret_payment": "Introduction to password-free payment",
+  "non_secret_payment_introduction_detail": "Password-free payment allows you to save wallet password to the Keychain/Keystore on your mobile device via a secure encryption algorithm to quickly make payments and sign.",
+  "remind_after_open_non_secret_payment": "Please backup your password securely after unlocking password-free payment method. You can also reset password via importing mnemonic phrase/private key.",
+  "risk_warning": "Risk reminder",
+  "risk_warning_detail_non_secret_payment": "Please check the level of biometric security system on your mobile device. Biometric recognition is not recommended for large assets or public devices.",
+  "disclaimer": "Disclaimer",
+  "disclaimer_detail_non_secret_payment": "Mobile devices vary in biometric security level, we kindly remind users to cautiously unlock the function. Titan will have no legal responsibility for the any asset lost during the use of biometric function. ",
+  "non_secret_open_success": "Password-free payment enabled",
+  "non_secret_open_fail": "Failed to unlock password-free payment",
+  "use_face_verify": "Verify with face recognition",
+  "cannot_fint_wallet": "wallet not found",
+  "wallet_test": "Wallet test",
+  "active_btc": "Activate BTC",
+  "show_qr": "Show QR Code",
+  "wallet_address_error_hint": "Please input a valid receiver address initiating with 1, bc or 3",
+  "save_update": "Save your update",
+  "update_success": "Updated!",
+  "update_failed": "Update failed",
+  "to_be_confirmed": "Pending",
+  "unconfirmed_btc_transfer_please_try_again_later_hint": "You have a pending BTC transaction, please try later",
+  "transaction_detail_state_func": "Confirm {transactionDetailState} times",
   "add_position_image_title_1": "拍摄时请保证商铺名称清晰完整，并拍全招牌和门脸",
   "add_position_image_title_2": "拍摄时请拍清楚商铺的左右相邻商铺",
   "add_position_image_title_3": "照片类型分为室外和室内，室外必填，室内选填，两者都有更容易评为优质POI哦",
