--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -822,5 +822,7 @@
   "false_data_at_location_detail_toast": "您提交的地点存在虚假数据!",
   "you_still_have_unfinished_tasks_detail_toast": "加油哦，你还有任务未完成",
   "wallet_password_decrypt": "使用钱包密码解密",
-  "setting_payment_password": "请设置支付密码"
+  "setting_payment_password": "请设置支付密码",
+  "set_bio_auth_success": "开启成功",
+  "set_bio_auth_fail": "开启失败"
 }
