--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -398,8 +398,8 @@
   "data_source_explain": "The red POIs are collected from China’s National and provincial Health Committee & Tencent News. The yellow POIs are contributed by users.",
   "source_desc_title": "Data source desc",
   "epidemic_map_short": "NCP MAP",
-  "search_failed": "搜索异常",
-  "cannot_get_your_location": "获取不到你当前位置",
+  "search_failed": "Search Error",
+  "cannot_get_your_location": "Cannot access your current location",
   "wait_min": "{min} min",
   "global_data": "Global Data",
   "global_data_map3": "Map3 node",
@@ -663,9 +663,9 @@
   "key_pair_error_share_location_again": "Keypair error, please re-share location",
   "activate_btc": "Activate BTC",
   "safety_certification_by_organizations": "Certified by authoritative institution",
-  "atlas_consensus_node": "Atlas共识节点",
-  "consensus_guarantee_for_hyberion": "为海伯利安生态提供共识保证",
-  "home_atlas_description": "''Atlas是以空间共识和弹性空间分片为主要特征的高性能地图区块链，可解决空间分片，账户资产转移，资产确认等与空间相关的服务需求。具有抗审查、开放参与、高容错等特点。未来待Atlas链搭建完成，将支持海伯利安成为服务100亿人的去中心化全球地图经济体系。\n\nAtlas将在技术上实现高可伸缩性、低延迟性、低成本、隐私保护、可扩展性和交互性，支持全球体量巨大的地图定位请求和位置搜索请求。未来主网上线之时，用户将能成为Atlas节点，参与提升区块链网络的安全、性能等，并获得HYN奖励。Atlas节点的奖励细则还有待确认，但将与Map3网络的边缘节点以及核心节点关联统一。''",
+  "atlas_consensus_node": "Atlas consensus node",
+  "consensus_guarantee_for_hyberion": "Provide consensus support to Hyperion ecosystem",
+  "home_atlas_description": "''Atlas is a high-performance spatial consensus blockchain that supports world-scale map service based on Elastic Spatial Sharding. It aims to solve spatial service requirements such as map asset transactions and validation, with special features of censorship resistance, open participation and fault-tolerance. Atlas will empower Hyperion to build decentralized global map economy that serves 10 billion users when built.\n\nAtlas will achieve scalability, low-latency, low-cost, privacy preservation, extensibility and interoperability from technological perspective to underpin massive location and search requests. Users will improve network security and efficiency, and get HYN rewards by deploying Atlas nodes. The details will be announced after the mainnet launch, but Atlas node is interconnected with Map3 nodes.''",
   "about_atlas_node": "Atlas consensus node",
   "in_progress": "In progress...",
   "node_not_create_by_app_withdraw_fail": "The node is not created from {app_name}, failed to withdraw",
