update ko trans

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -531,110 +531,110 @@
   "create_map_node_must_have_block_account": "Map3 모기지 노드를 만들려면 먼저 블록 체인 지갑 계정이 있어야 합니다. ",
   "undefind_error": "미 정의 오류",
   "ten_thousand": "만",
-  "network_request_error": "网络请求异常~",
-  "click_retry": "点击重试",
-  "china": "中国",
-  "get_position_error_cant_contribution": "获取位置权限失败，无法贡献附近信号信息！",
-  "get_local_file_fail_cant_contribution": "获取读取本地文件权限失败，无法贡献附近信号信息！",
-  "get_device_fail_cant_contribution": "获取设备信息权限失败，无法贡献附近信号信息！",
-  "month": "月",
-  "day": "日",
-  "create_import_wallet_account": "创建/导入钱包账户",
-  "isnt_trustwallet_cant_export": "不是TrustWallet钱包，不支持导出助记词",
-  "example": "如",
-  "can_use": "可用",
-  "input_transfer_num": "输入转账数量",
-  "transfer_num_bigger_zero": "转账数目必须大于0",
-  "map_contract_execution": "MAP3合约调用",
-  "not_legal_public_key": "不是合法的公钥",
-  "ciphertext_has_expired": "密文无效或已过期",
-  "click_refresh": "点击刷新",
+  "network_request_error": "네트워크 요청 오류가 발생하였습니다.",
+  "click_retry": "재시도를 클릭해주십시요.",
+  "china": "중국",
+  "get_position_error_cant_contribution": "위치 권한 획득에 실패하여 인근 신호 정보를 기여할수 없습니다.",
+  "get_local_file_fail_cant_contribution": "파일 읽기 권한 획득에 실패하여 인근 신호 정보를 기여할수 없습니다.",
+  "get_device_fail_cant_contribution": "설비 정보 권한 획득에 실패하여 인근 신호 정보를 기여할수 없습니다.",
+  "month": "월",
+  "day": "일",
+  "create_import_wallet_account": "지갑 계정 새로 만들기/가져오기",
+  "isnt_trustwallet_cant_export": "TrustWallet 지갑이 아니므로 도움말 가져오기를 지원할수 없습니다.",
+  "example": "만일",
+  "can_use": "사용 가능",
+  "input_transfer_num": "이체 수량 입력",
+  "transfer_num_bigger_zero": "이체 수량은 반드시 0이상이여야 합니다.",
+  "map_contract_execution": "MAP3 계약 전용",
+  "not_legal_public_key": "합법적인 공용키가 아닙니다.",
+  "ciphertext_has_expired": "밀문이 무효거나 유효기를 초과하였습니다.",
+  "click_refresh": "새로 고침을 클릭",
   "join_delegate": "모기지(저당) 에 참여",
-  "manager_tip_hyn": "管理费(HYN)",
-  "withdrawRefund": "申请退款",
-  "contract_had_stop": "合约已结束",
-  "contract_had_expired": "合约已到期",
-  "create_contract_only_one_hint": "• 一个钱包有且只能创建一个Map3节点抵押合约。合约到期后可再创建一个。",
-  "contract_running": "合约运行中",
-  "check_is_create_contract_hint": "你已有一个创建合约的请求正处理中",
-  "happy_get_half_reward_hint": "恭喜你获得一半奖励",
-  "get_manage_tip_hyn": "获得管理费(HYN)",
-  "out_mange_tip_hyn": "支出管理费(HYN)",
-  "input_confirm_pending": "转入待确认中",
-  "output_confirm_pending": "提取待确认中",
-  "input_confirm_fail": "转入失败",
-  "output_confirm_fail": "提取失败",
-  "input_confirm_success": "已转入",
-  "output_confirm_success": "已提取",
-  "task_pending": "待处理中",
+  "manager_tip_hyn": "관리비용(HYN)",
+  "withdrawRefund": "환불 신청",
+  "contract_had_stop": "계약 종료",
+  "contract_had_expired": "계약 만료",
+  "create_contract_only_one_hint": "•  한개의 지갑은 MAP3 노드 저당 계약을 하나만 확보하거나 새로 만들수 있습니다.계약 만료 후 다시 새로 한개 만들수 있습니다.",
+  "contract_running": "계약 이행 중",
+  "check_is_create_contract_hint": "당신의 계약 새로 만들기 청구가 현재 처리중입니다.",
+  "happy_get_half_reward_hint": "당신의 50% 포상 획득을 축하드립니다.",
+  "get_manage_tip_hyn": "관리비용(HYN) 획득",
+  "out_mange_tip_hyn": "관리비용(HYN) 지출",
+  "input_confirm_pending": "입금 확인중입니다.",
+  "output_confirm_pending": "인출 확인중입니다.",
+  "input_confirm_fail": "입금 실패",
+  "output_confirm_fail": "인출 실패",
+  "input_confirm_success": "입금 완료",
+  "output_confirm_success": "인출 완료",
+  "task_pending": "처리중입니다.",
   "task_finished": "임무 완성",
-  "your_last_input_to_contract_func": "你的最新抵押：{input}, {task_pending}",
-  "collect_request_have_post_please_wait_hint": "提取请求已提交，请耐心等候",
-  "happy_get_all_reward_hint": "恭喜你成功提取所有奖励",
-  "your_last_output_to_contract_func": "你的最新提取：{input}, {task_pending}",
-  "no_pengding_node_contract_hint": "没有待启动的节点合约\n您可以创建合约",
-  "delegation_full_will_active_hint": "抵押已满，即将启动",
-  "contract_share_content": "\"{who}\"在{appName}上发现了海伯利安{nodeName}合约，年化奖励去到{annualized}，周期{duration}天，邀请你前往围观！",
-  "reset_input_contract": "重新投入",
-  "reset_output_contract": "重新提取",
-  "contract_launch_fail_please_get_back": "合约启动失败，请申请退款",
-  "mnemonic_qrcode_tip": "이 QR 코드에는 니모닉이 포함되어 있습니다",
-  "qrcode": "二维码",
-  "delegation_amount_full": "抵押已满",
-  "time_left": "剩余",
-  "camera_scan": "相机扫描",
-  "import_from_album": "从相册导入",
-  "select_qrcode_picture": "选择二维码图片",
-  "all_picture": "所有图片",
+  "your_last_input_to_contract_func": "당신의 최신 저당：{input}, {task_pending}",
+  "collect_request_have_post_please_wait_hint": "인출 청구가 제출되였으니 잠시만 기다려주십시요.",
+  "happy_get_all_reward_hint": "전부의 포상금액 인출 성공을 축하드립니다.",
+  "your_last_output_to_contract_func": "당신의 최신 인출: {input}, {task_pending}",
+  "no_pengding_node_contract_hint": "가동 대기중인 노드 계약이 없습니다. \n새로운 계약을 만들수가 있습니다.",
+  "delegation_full_will_active_hint": "저당이 만족되여 곧 작동됩니다.",
+  "contract_share_content": "\"{who}\"나는{appName}에서 헤벌리안{nodeName}계약을 발견하였습니다.연간 포상금액은 {annualized}으로,주기는 {duration}일이며 당신을 이곳으로 와서 관람하시도록 초대합니다！",
+  "reset_input_contract": "재투입",
+  "reset_output_contract": "재인출",
+  "contract_launch_fail_please_get_back": "계약 가동에 실패하였습니다.환불 신청을 해주십시요.",
+  "mnemonic_qrcode_tip": "이 QR코드 번호는 당신의 도움말을 포함하였습니다.",
+  "qrcode": "QR코드번호",
+  "delegation_amount_full": "저당 완료",
+  "time_left": "잔여",
+  "camera_scan": "카메라 스캔",
+  "import_from_album": "사진첩에서 가져오기",
+  "select_qrcode_picture": "QR코드 번호 사진 선택",
+  "all_picture": "모든 사진",
   "select_picture": "选择图片",
-  "renew_contract_ing": "复投中...",
-  "renew_contract": "续约复投",
-  "join_map_node_must_have_block_account": "参与Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
-  "launcher_time_left": "启动剩{time}",
-  "scan_qrcode_result": "扫码结果",
-  "global_node_map_title": "全球节点分布:",
-  "my_contract": "我的合约",
-  "active": "启动",
-  "expired": "到期",
-  "number": "编号",
-  "launcher_func": "发起人:  {ownerName}",
-  "n_second": "{n}秒",
-  "left": "剩",
-  "n_hour_simple": "{hour}时",
-  "n_minute_simple": "{minute}分",
-  "check_join": "查看参与",
-  "create_wallet_account_check_contract": "你需要先创建/导入钱包账户，才能查看你的钱包账户相关节点数据。",
-  "create_or_import_wallet_first": "请先创建/导入钱包",
-  "map_smart_contract_management": "map3智能合约管理",
-  "scan": "扫一扫",
-  "start_navigation_tips": "Welcome to use the Hyperion map to start navigation",
-  "nonce_too_low_hint": "nonce too low",
-  "nonce_too_high_hint": "nonce too high",
-  "gas_limit_reached_hint": "gas limit reached",
-  "insufficient_funds_for_transfer_hint": "insufficient funds for transfer",
-  "intrinsic_gas_too_low_hint": "intrinsic gas too low ",
-  "insufficient_funds_for_gas_price_value_hint": "insufficient funds for gas price value ",
-  "provision_insufficient_hint": "provision insufficient",
-  "not_half_time_to_collect_hint": "not half time to collect",
-  "already_collected_hint": "already collected",
-  "already_imported_hint": "already imported",
-  "no_longer_valid_hint": "no longer valid",
-  "transaction_limit_reached_hint": "Transaction limit reached",
-  "insufficient_gas_price_hint": "Insufficient gas price.",
-  "gas_price_too_low_to_replace_hint": "Gas price too low to replace",
-  "insufficient_gas_hint": "Insufficient gas.",
-  "insufficient_balance_for_transaction_hint": "Insufficient balance for transaction.",
-  "gas_limit_exceeded_hint": "Gas limit exceeded.",
-  "insufficient_balance_to_stake_hint": "insufficient balance to stake",
-  "self_delegation_insufficient_hint": "self delegation insufficient",
-  "delegation_insufficient_hint": "delegation insufficient",
-  "not_equal_to_remaining_delegation_hint": "not equal to remaining delegation",
-  "node_already_exist_hint": "node already exist",
-  "node_not_exist_hint": "node not exist",
-  "not_allow_to_delegate_in_unpending_state_hint": "not allow to delegate in unpending state",
-  "not_allow_to_collect_in_pending_state_hint": "not allow to collect in pending state",
-  "delegator_not_exist_hint": "delegator not exist",
-  "not_time_to_collect_hint": "not time to collect",
+  "renew_contract_ing": "사진 선택",
+  "renew_contract": "재계약후 재투자",
+  "join_map_node_must_have_block_account": "MAP3 저당 노드 참여전 반드시 블록체인 지갑 계정을 확보해야 합니다.",
+  "launcher_time_left": "가동까지 남은{time}",
+  "scan_qrcode_result": "스캔 결과",
+  "global_node_map_title": "글로벌 노드 분포",
+  "my_contract": "나의 계약",
+  "active": "작동",
+  "expired": "만료",
+  "number": "번호",
+  "launcher_func": "발기인:  {ownerName}",
+  "n_second": "{n}초",
+  "left": "남은",
+  "n_hour_simple": "{hour}시",
+  "n_minute_simple": "{minute}분",
+  "check_join": "참여 찾아보기",
+  "create_wallet_account_check_contract": "당신은 지갑 계정 새로 만들기/가져오기를 우선적으로 해야만이 지갑 계정과 관련된 노드 데이터를 찾아볼수 있습니다.",
+  "create_or_import_wallet_first": "지갑 계정 새로 만들기/가져오기",
+  "map_smart_contract_management": "MAP3 스마트 계약 관리",
+  "scan": "스캔하기",
+  "start_navigation_tips": "해버리안 지도로 네비게이션을 시작한것을 환영합니다.",
+  "nonce_too_low_hint": "nonce너무 낮다",
+  "nonce_too_high_hint": "nonce너무 높다",
+  "gas_limit_reached_hint": "비용 한도를 초과하였습니다.",
+  "insufficient_funds_for_transfer_hint": "자금부족으로 계좌 이체를 할수가 없습니다.",
+  "intrinsic_gas_too_low_hint": "초기 비용이 너무 낮습니다.",
+  "insufficient_funds_for_gas_price_value_hint": "자금부족으로 비용 가격 오류가 발생하였습니다.",
+  "provision_insufficient_hint": "준비금액이 부족합니다.",
+  "not_half_time_to_collect_hint": "수령 가능합니다.",
+  "already_collected_hint": "수령 완료",
+  "already_imported_hint": "불러오기",
+  "no_longer_valid_hint": "무효",
+  "transaction_limit_reached_hint": "거래 한도를 초과하였습니다.",
+  "insufficient_gas_price_hint": "배분 금액이 부족합니다.",
+  "gas_price_too_low_to_replace_hint": "배분 금액이 너무 낮아 교환할수가 없습니다.",
+  "insufficient_gas_hint": "배분액이 부족합니다.",
+  "insufficient_balance_for_transaction_hint": "잔액 부족으로 거래할수가 없습니다.",
+  "gas_limit_exceeded_hint": "비용 한도를 초과하였습니다.",
+  "insufficient_balance_to_stake_hint": "잔액 부족으로 주식 출자에 참여할수가 없습니다.",
+  "self_delegation_insufficient_hint": "자아 권한 부여 부족",
+  "delegation_insufficient_hint": "권한 부여 부족",
+  "not_equal_to_remaining_delegation_hint": "잔여 권한 부여와 일치하지 않습니다.",
+  "node_already_exist_hint": "존재하고 있는 노드입니다.",
+  "node_not_exist_hint": "노드가 존재하지 않습니다.",
+  "not_allow_to_delegate_in_unpending_state_hint": "확인되지 않은 상태에서 권한 부여를 금지합니다.",
+  "not_allow_to_collect_in_pending_state_hint": "확인되지 않은 상태에서 수령을 금지합니다.",
+  "delegator_not_exist_hint": "수권인이 존재하지 않습니다.",
+  "not_time_to_collect_hint": "수령할 시간이 없습니다.",
   "cannot_fint_wallet": "로컬 지갑을 찾을수가 없습니다.",
   "advanced_mode": "고급 모드",
   "software_agreement": "소프트웨어 협의",
