--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -836,9 +836,9 @@
   "setting_payment_password": "Please set a payment password",
   "set_bio_auth_success": "Turn on successfully",
   "set_bio_auth_fail": "Failed to turn on",
-  "unlock_decrypted_location": "解开加密位置",
-  "update_wallet": "更新钱包",
-  "delete_wallet": "删除钱包",
+  "unlock_decrypted_location": "Unlock the encrypted location",
+  "update_wallet": "Update wallet",
+  "delete_wallet": "Delete wallet",
   "bio_auth_title_face": "Please verify your face",
   "bio_auth_title_fingerprint": "Please verify your fingerprint"
 }
