【Update】 update translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -127,7 +127,7 @@
   "input_password_again_hint": "Please re-enter the password",
   "password_not_equal_hint": "Inconsistent passwords",
   "input_confirm_wallet_password_hint": "Please re-enter a wallet password",
-  "next": "continue",
+  "next": "Continue",
   "account_backup_notice": "Back up your account now",
   "account_backup_next_step_notice": "Next, you will see 12 recovery words in an order that allow you to recover your account",
   "lossz_wallet_mnemonic_notice": "I understand that if I lose the recovery word, I will not be able to access my wallet",
@@ -419,13 +419,13 @@
   "annualized_rewards": "APR",
   "remain": "left",
   "join": "Join",
-  "node_version": "node version",
+  "node_version": "Node version",
   "service_provider": "Service provider",
-  "node_location": "node location",
-  "please_confirm_eth_gas_enough": "·  Please confirm your（{walletName}）has sufficient ETH Gas Fee",
-  "create_no_enough_hyn_start_fail": "·  If the node is cancelled without max. total HYN delegation to initiate the contract in seven days, delegators can withdraw HYN to accounts",
-  "contract_create_cant_destroy": "·  Cannot withdraw staking when the Map3 node contract is initiated",
-  "freeze_balance_reward_direct_push": "·  A 500U deposit is required for node initiation to reward a referee。The referee will charge 5% of the total node reward",
+  "node_location": "Node location",
+  "please_confirm_eth_gas_enough": "• Please confirm your（{walletName}）has sufficient ETH Gas Fee",
+  "create_no_enough_hyn_start_fail": "• If the node is cancelled without max. total HYN delegation to initiate the contract in seven days, delegators can withdraw HYN to accounts",
+  "contract_create_cant_destroy": "• Cannot withdraw staking when the Map3 node contract is initiated",
+  "freeze_balance_reward_direct_push": "• A 500U deposit is required for node initiation to reward a referee。The referee will charge 5% of the total node reward",
   "confirm_bug": "Confirm to purchase",
   "mortgage_hyn_num": "Delegated HYN",
   "mortgage_wallet_balance": "（Available {balance}）",
@@ -730,7 +730,7 @@
   "add_position_image_title_2": "The POI photo(s) must clearly show adjacent shops",
   "add_position_image_title_3": "Photo is categorized into indoor (compulsory) and outdoor (optional). Take both will get a better chance of being excellent POI. ",
   "add_position_image_title_4": "Market stalls or military arena is prohibited ",
-  "add_position_image_subtitle_2": "If without adjacent shops, please shoot surrounding outdoor atmosphere",
+  "add_position_image_subtitle_2": "（If without adjacent shops, please shoot surrounding outdoor atmosphere）",
   "shooting_specifications_title": "Shooting specification",
   "examples": "Example",
   "outdoor_example": "Outdoor example",
@@ -785,7 +785,7 @@
   "confirm_alert_view_content": "Please confirm your answers are true",
   "exist_alert_view_content": "You think the POI on map does not exist",
   "exist_alert_view_detail": "Your verification is honest, as it matches with the community gaming result.",
-  "correct": "Confirmed all correct",
+  "correct": "Correct",
   "return_check": "Back to verify",
   "regulation": "Legitimate",
   "photo": "Photo",
@@ -826,8 +826,8 @@
   "your_answer": "Your answer",
   "wrong_answer": "Incorrect answer",
   "poi_real_picture": "POI on-site photo",
-  "scanning_location": "Scan location",
-  "add_location": "Add location",
+  "scanning_location": "Scan",
+  "add_location": "Add",
   "task_failed": "Task failed",
   "task_is_not_finish": "Task incomplete!",
   "false_data_at_location_detail_toast": "Your POI contains false data!",
@@ -840,5 +840,8 @@
   "update_wallet": "更新钱包",
   "delete_wallet": "删除钱包",
   "bio_auth_title_face": "Please verify your face",
-  "bio_auth_title_fingerprint": "Please verify your fingerprint"
-}
+  "bio_auth_title_fingerprint": "Please verify your fingerprint",
+  "indoor": "Indoor",
+   "most": "Most",
+   "ps_gas_hint": "PS: In order to avoid transfer failure, the system default GAS value is too large, and the GAS deduction on the actual chain shall prevail in the end."
+ }
