--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -86,7 +86,7 @@
   "map3_global_nodes": "Map 3 글로벌 노드",
   "global_nodes": "글로벌 노드",
   "global_map_server_nodes": "글로벌 맵 서버 노드",
-  "Hyperion": "HYPERION (하이페리온)",
+  "Hyperion": "HYPERION",
   "project_introduction": "프로젝터 소개",
   "data_contribute": "데이터 제공",
   "data_contribute_reward": "데이터 제공으로 인한 보상",
