--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -726,5 +726,107 @@
   "forgot_password": "비밀번호 분실",
   "indoor": "옥내",
   "most": "대부분",
-  "ps_gas_hint": "추신 : 전송 실패를 피하기 위해 시스템 기본 GAS 값이 너무 커서 체인에서 실제 GAS 공제가 우선합니다."
+  "ps_gas_hint": "추신 : 전송 실패를 피하기 위해 시스템 기본 GAS 값이 너무 커서 체인에서 실제 GAS 공제가 우선합니다.",
+  "join_map3_level_min": "• 레벨은 반드시{levelName}보다 크거나 동일해야 계약을 새로 만들수 있습니다.",
+  "referrer_reward_tip": "• 노드 계약기간이 만료되면 당신은 직속 추천인 계약 총수익의 5%를 그의 추천 보상으로 주어야 합니다.",
+  "no_hash_found": "거래 하시를 발견하지 못했습니다.",
+  "add_position_image_title_1": "촬영시 점포의 명칭이 정확하고 명확해야 하며 간판과 출입구 전면도 촬영해야 한다.",
+  "add_position_image_title_2": "촬영시 점포의 좌우 이웃 상가 점포도 정확하게 촬영해야 한다.",
+  "add_position_image_title_3": "사진 유형은 실외와 실내로 구분되며 실외는 필수항이고 실내는 선택항이며 양자를 다 구비할 경우 우수 POI로 선정될 가능성이 더 높습니다.",
+  "add_position_image_title_4": "이동 매장 등 비고정적인 지점을 촬영해서는 안되며 군사 금지 지역 등 비밀유지 지점을 촬영해서도 안된다.",
+  "add_position_image_subtitle_2": "(이웃 상가가 없을 경우 상가 좌우 환경을 정확하게 촬영해야 한다.",
+  "shooting_specifications_title": "촬영 규범",
+  "examples": "예시",
+  "outdoor_example": "실외 예시",
+  "indoor_example": "실내 예시",
+  "swipe_left_and_right_title": "좌우 이동 전환",
+  "network_service_error_toast": "네트워크 서비스 오류",
+  "error_code_func": "오류 번호: {errorCode}",
+  "network_connection_timeout_please_try_again_later_toast": "네트워크 연결시간이 초과되였습니다.잠시후 다시 시도해주십시요.",
+  "picture_format_is_not_supported_yet_toast": "사진 격식을 지원하지 않습니다.",
+  "place_name": "지점 명칭",
+  "outdoor": "실외",
+  "unit_zhang": "{num}장",
+  "address": "주소",
+  "location_on_the_map": "지도 위치",
+  "edit_location": "수정 위치",
+  "click_where_to_edit": "편집중인 소재 위치를 클릭",
+  "prompt": "제시",
+  "add_position_page_prompt": "1.지방 법규를 위반한 지점을 제출해서는 안된다.예를 들면 군사지역과 정치적으로 민감한 위치\n\n2등은 지점을 제출 후 만일 SNS의 검증을 거쳐 이 지점은 진실하고 유효적일 경우 지점을 지도에서 나타낸다.",
+  "agree": "동의",
+  "photo_specification": "촬영 규범",
+  "unsupported_image_formats_will_be_removed_selected_toast": "지원하지 않는 사진 격식은 삭제 선택됩니다.",
+  "add_location_data_please_confirm_actual_situation_toast": "지점 데이터를 추가중이니 실제 정황에 따라 지점과 관련된 자료를 정확하게 입력하였는지 확인해주세요.",
+  "confirm_location": "위치 확인",
+  "balance_is_not_enough_to_transfer_toast_func": "당신의 계좌 잔고 금액은 노드 총수익의5%(≈ {withdrawnStr})를 직접 추천인에게 조달하기에는 부족하므로 우선 잔고 금액을 충전해주십시요.",
+  "scan_qr_code_for_details": "QR코드 스캔후 상세정보 보기",
+  "cannot_exceed_the_remaining_share": "잔여 분액을 초과해서는 안된다.",
+  "node_not_created_in_x_extraction_failed": "이 노드는{name}가 만든것이 아니므로 인출에 실패하였습니다.",
+  "handle_abnormal_reward_transfer_toast_func": "인센티브 이전 처리중 오류가 발생하였습니다.오류번호: {code}",
+  "failed_to_bind_wallet_please_exit_task_and_try_again_toast": "지갑 바인딩에 실패하였습니다.미션 퇴출후 재시도해주십시요.",
+  "uncertain": "불확실",
+  "back": "돌아가기",
+  "whether_above_picture_real_picture_of_the_place_toast": "이 사진은 이 지점의 실제적인 사진인가요?",
+  "network_error_please_check_whether_the_network_connection_normal_toast": "네트워크 오류입니다.네트워크 연결 상태를 확인해주세요.",
+  "failed_to_request_data_to_be_verified_error_code_toast_func": "인증중인 데이터 청구 오류가 발생하였습니다.오류번호: {code}",
+  "failed_to_post_confirm_data_to_be_verified_error_code_toast": "인증 데이터 제출 오류가 발생하였습니다. 错误码:${code}",
+  "please_confirm_answered_verification_question_truthfully_toast": "인증 관련 문제를 성실하게 답변하였음을 확인합니다.",
+  "exist": "존재",
+  "does_not_exist": "존재하지 않는다.",
+  "compliance_with_local_regulations": "지방 법규에 부합된다.",
+  "violation_of_local_regulations": "지방 법규를 위반하였습니다.",
+  "deviation_less_than_50_meters": "편차는 50미터 이내",
+  "deviation_less_than_100_meters": "편차는 100미터 이내",
+  "deviation_less_than_200_meters": "편차는 200미터 이내",
+  "deviation_more_than_meters": "편차가 비교적 큽니다.",
+  "another": "다른",
+  "ignore_alert_view_detail": "현재 지점에 대해 익숙하지 못하면 새로운 지점으로 바꿔서 인증을 시도합니다.",
+  "ignore_alert_view_content": "새로운 지점으로 교체하여 인증 미션을 하겠습니까?",
+  "confirm_alert_view_detail": "결과와 당신이 답변한 결과가 일치하면 이번 인증은 성실한것입니다!",
+  "confirm_alert_view_content": "인증 문제를 성실하게 답변하였음을 확인합니다.",
+  "exist_alert_view_content": "이 지점이 지도상에 존재하지 않는다고 인정합니다.",
+  "exist_alert_view_detail": "결과와 당신이 답변한 결과가 일치하면 이번 인증은 성실한것입니다!",
+  "correct": "틀림없는",
+  "return_check": "인증으로 돌아가기",
+  "regulation": "합법적",
+  "photo": "사진",
+  "failed_to_request_data_to_be_verified_error_code_toast": "인증중인 청구 데이터 오류가 발생하였습니다.",
+  "failed_to_post_confirm_data_to_be_verified_error_code": "인증 데이터 제출 오류가 발생하였습니다.",
+  "verification_location": "인증 지점",
+  "position": "위치",
+  "regulation_title": "이 지점은 지방 법규에 부합됩니까?",
+  "regulation_subtitle": "일부 국가/지역에서는 군사기지와 정치적으로 민감한 위치,황색 서비스 등을 표시하지 못하도록 합니다.",
+  "website_title": "이 지점의 서비스 인터넷 주소는 이 주소입니까?",
+  "work_time_title": "이 지점의 영업 시간은 아래의 시간대가 맞습니까?",
+  "image_toast_title": "이 시진은 이 지점의 현장 사진이 맞습니까?",
+  "map_in_title": "지도의 것",
+  "map_in_subtitle": "지점의 위치가 정확합니까?",
+  "map_in_exist_subtitle": "지점이 존재합니까?",
+  "category_title": "이 지점의 유형은",
+  "category_suffix_title": "입니까",
+  "restaurant": "미식",
+  "lodging": "호텔",
+  "tourist_attraction": "관광지",
+  "grocery_or_supermarket": "슈퍼마켓",
+  "shopping_mall": "쇼핑몰",
+  "net_bar": "PC방",
+  "wc": "화장실",
+  "change_background_image_title": "배경사진 교체",
+  "my_invitation_link": "나의 초대 링크",
+  "false_location_determination": "허위 지점 판정",
+  "determine_cause": "판단 원인",
+  "you_incorrectly_verified_place_you_submitted": "자신이 제출한 지점 인정 오류가 발생하였습니다.",
+  "false_data_toast": "자신이 제출한 지점 인정 오류가 발생하였습니다.시스템에서는 당신이 제출한 지점의 정확여부를 확인할수 없다고 인정하므로 허위 데이터로 판정합니다.",
+  "where_you_submit": "제출한 지점",
+  "wrong_check_record": "잘못된 인증 기록",
+  "determine_whether_picture_is_a_real_picture": "사진의 실제 여부를 판정",
+  "your_answer": "당신의 답안",
+  "wrong_answer": "답안 오류가 발생하였습니다.",
+  "poi_real_picture": "POI 실제 사진",
+  "scanning_location": "지점 스캔",
+  "add_location": "지점 추가",
+  "task_failed": "미션 실패",
+  "task_is_not_finish": "미션 미 완성",
+  "false_data_at_location_detail_toast": "당신이 제출한 지점은 허위 데이터가 존재합니다.",
+  "you_still_have_unfinished_tasks_detail_toast": "화이팅하세요,아직 완성하지 못한 미션이 있습니다."
 }
