update ko trans

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -95,7 +95,7 @@
   "foods": "Foods",
   "hotel": "Hotel",
   "attraction": "Travel",
-  "paking": "Parking",
+  "parking": "Parking",
   "gas_station": "Gas Station",
   "bank": "Bank",
   "supermarket": "Supermarket",
