--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -94,7 +94,7 @@
   "foods": "美食",
   "hotel": "酒店",
   "attraction": "景点",
-  "paking": "停车场",
+  "parking": "停车场",
   "gas_station": "加油站",
   "bank": "银行",
   "supermarket": "超市",
