--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -94,7 +94,7 @@
   "foods": "美食",
   "hotel": "酒店",
   "attraction": "景點",
-  "paking": "停車場",
+  "parking": "停車場",
   "gas_station": "加油站",
   "bank": "銀行",
   "supermarket": "超市",
